force-app/main/default/objects/Application_Template_Question__c/Application_Template_Question__c.object-meta.xml
<CustomObject>
    <description>Links Questions to Application Templates they should be included in</description>
    <label>Application Template Question</label>
    <nameField>
        <displayFormat>ATQ-{00000}</displayFormat>
        <label>Application Template Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Template Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>