force-app/main/default/objects/Application_Template_Question__c/fields/Application_Template__c.field-meta.xml
<CustomField>
    <fullName>Application_Template__c</fullName>
    <label>Application Template</label>
    <referenceTo>Application_Template__c</referenceTo>
    <relationshipLabel>Application Template Questions</relationshipLabel>
    <relationshipName>Application_Template_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>