force-app/main/default/objects/Application_Template_Question__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>The order in which this question appears when presented on an application. Lowest values appear first.</description>
    <inlineHelpText>The order in which this question appears when presented on an application. Lowest values appear first.</inlineHelpText>
    <label>Sort Order</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>